* Updated m1.xlarge and m2.xlarge instance types to use 10G heaps * Updated m1.large and c1.xlarge to use 5G